2008-03-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   When opening the manual on the website, include version string to
   ensure the appropriate manual version is shown.


2008-03-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   When closing tabs that were opened left-to-right, don't temporarily
   focus the previous tab when closing tabs, to prevent unnecessary
   checking for disk changes.
 * src/win32.c, src/dialogs.c, src/document.c, src/document.h:
   Only use filetype detection after Save As, not on every save when the
   filetype is None (fixes #1891778).


2008-03-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * HACKING: Add note and link for GTK 2.6 API docs.


2008-03-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/plugin-symbols.c, doc/Makefile.am, doc/plugins.dox:
   Move plugin symbols page into separate source file so that symbols
   are listed as variables and functions and are autolinked.
   Edit plugin symbols description, document some function parameters.
 * doc/plugins.dox:
   Add page links on the main page (easier than going to Related Pages,
   and we can also list special files like plugin-symbols.c).
 * src/utils.c:
   When detecting a change on disk, reload the file after all pending
   Scintilla messages have been processed, to prevent problems with
   partial colourisation.
 * src/symbols.c:
   Fix bug with showing macro list items all on one line.
 * src/plugins.c:
   Load and save plugin keybindings when toggling plugins in the Plugin
   Manager.
 * doc/geany.txt, doc/geany.html:
   Update configurable keybindings section for new plugin groups
   ordering.
   s/tabulator/tab/.
   Move scroll by one line shortcuts to configurable keybindings
   section.


2008-03-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Set mnemonic for Plugin Manager.