@@ -1,5 +1,5 @@
 man_MANS=geany.1
-DOCDIR = $(DESTDIR)/$(datadir)/doc/@PACKAGE@
+DOCDIR = $(DESTDIR)/$(docdir)
 IMAGE_FILES = images/*.png
 EXTRA_DIST = geany.html geany.css geany.txt geany.1 plugins.dox plugin-symbols.c \
 			 $(srcdir)/$(IMAGE_FILES)
