@@ -3,6 +3,9 @@
  * src/callbacks.c:
    When opening the manual on the website, include version string to
    ensure the appropriate manual version is shown.
+ * src/prefix.h, src/main.c, src/Makefile.am, doc/Makefile.am:
+   Use configure's --docdir option when installing and using the
+   documentation.
 
 
 2008-03-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
